--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
             <div id="logo">
                 <img src="images/avatar.jpg" alt="Minh Canh Vu" width="120" height="120" draggable="false">
                 <a id="printable_banner" href="https://vmcanh.github.io/CV_Minh_Canh_VU/">Printable CV</a>
-                <h1><a href="http://nitrieu.github.io">Minh Canh VU</a></h1><h7></h7>
-                <h2>Ph.D. at KNUT</h2>
+                <h1><a href="https://vmcanh.github.io/">Minh Canh VU</a></h1><h7></h7>
+                <h2>+82 10-8349-1992</h2>
+	    <h2>vmcanh@ut.ac.kr</h2>
+
             </div>
 
             <div class="sticky-note ">
@@ -62,7 +64,7 @@ $(document).ready(function(){
                 <ul>
                     <li>Two papers accepted to  <font color="red">ACS AMI </font>  2020</li>
                     <li>One paper accepted to  <font color="red">Composites A</font>  2020</li>
-                    <li>I am going to defend my PhD in July!</li>
+                    <li>PhD dissertation defense in 2nd July!</li>
                 </ul>
 
             </div>
@@ -77,18 +79,18 @@ $(document).ready(function(){
 
                 <div class="item">
                     <div class="date"><a style="color:black"><b>August 2020</b></a></div>
-                    <h5><a href="http://is.ut.ac.kr/" style="color:red; text-decoration: none">Korea National University of Transportation</a></h5>
+                    <h5><a href="http://is.ut.ac.kr/" style="color:red; text-decoration: none">Korea National University</a></h5>
                     <ul style="list-style: none; margin:0;">
                         <li>Ph.D. | Polymer Science and Engineering Science | 4.25/4.5 GPA</li>
-                        <li>Advisor: Dr. <a href="http://pml.ut.ac.kr/" target="_blank" style="color: none; text-decoration: none"> <b>Sung-Ryong Kim</b></a>  </li>
-                        <li>Dissertation: <a style="color:black"> <i>Study on Thermoconductive and Flexible Graphene Derivatives Nanosheets based Films for Thermal Management Applications</i> </a></li>
+                        <li>Advisor: Prof. <a href="http://pml.ut.ac.kr/" target="_blank" style="color: none; text-decoration: none"> <b>Sung-Ryong Kim</b></a>  </li>
+                        <li>Dissertation: <a style="color:blue"> <i>Graphene Fluoride for Thermoconductive Nanocomposites</i> </a></li>
                     </ul>
                 </div>
                 <div class="item">
                     <div class="datetop"><a style="color:black"><b>June 2017</b></a></div>
                     <ul style="list-style: none; margin:0;">
                         <li>M.Sc. | Polymer Science and Engineering Science | 4.25/4.5 GPA</li>
-                        <li>Thesis: <a style="color:black"> <i>Study on the Adhesion and Thermal Properties of the Functionalized Graphene Oxide based Pressure-Sensitive Adhesives</i> </a></li>
+                        <li>Thesis: <a style="color:blue"> <i>Study on the Adhesion and Thermal Properties of the Functionalized Graphene Oxide based Pressure-Sensitive Adhesives</i> </a></li>
                     </ul>
                 </div>
                 <div class="item">
@@ -99,7 +101,7 @@ $(document).ready(function(){
                     <ul style="list-style: none; margin:0;">
                         <li>B.Sc. | Chemical Engineering | 3.0/4.0 GPA </li>
                         <li> Advisor: Dr. <a style="color: none; text-decoration: none"><b>Nguyen Thi Thanh Huong</b></a> </li>
-                        <li> Thesis: <a style="color:black"> <i>Green Synthesis of Lubricant Oil from Oleic Acid</i> </a> </li>
+                        <li> Thesis: <a style="color:blue"> <i>Green Synthesis of Lubricant Oil from Oleic Acid</i> </a> </li>
                     </ul>
 
                 </div>
@@ -137,17 +139,71 @@ $(document).ready(function(){
                             <h8>
                                 <a style="color:navy; font-size: 14px; text-align: left"><p><b>Graphene derivatives</b></p> </a>
                             </h8>
+		<h8>
+                                <a style="color:navy; font-size: 14px; text-align: left"><p><b>Polymerizations</b></p> </a>
+                            </h8>
                         </ul>
                     </div>
-
+	   <p>
+                        <h6>20.<a style="color:black; text-align: justify; font-size: 16px"> <b>M.C. Vu</b></a>, T.H. Jang, C.B. Kim, D.H. Kim, W.K. Choi, M.A. Islam, S.R. Kim,</h6>
+                        <ul style="list-style: none; margin:0;">
+                            <li>
+                                <h6>
+                                    <a href="https://onlinelibrary.wiley.com/" style="color:blue; text-decoration: none; font-size: 16px"> 3D printing of copper particles and poly(methyl methacrylate) beads containing poly(lactic acid) composites for enhancing thermo-mechanical properties</a>,
+                                    <a style="color:black; text-align: justify; text-decoration: none; font-size: 16px"> <i><b>J. Appl. Polym. Sci</b></i></a>,
+                                    <a style="color:black; text-align: justify; text-decoration: none; font-size: 16px"> x</a>,
+                                    <a style="color:black; text-align: justify; text-decoration: none; font-size: 16px"> 2020.</a>
+                                </h6>
+                            </li>
+                        </ul>
+                    </p>
+		 <p>
+                        <h6>19.<a style="color:black; text-decoration: none; text-decoration: none; font-size: 16px"> N.A.T. Thieu, <b>M.C. Vu</b></a>, D.H. Kim, W.K. Choi, S.R. Kim,</h6>
+                        <ul style="list-style: none; margin:0;">
+                            <li>
+                                <h6>
+                                    <a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/pat.4954" style="color:blue; text-decoration: none; font-size: 16px"> Effect of aspect ratio of vertically aligned copper nanowires in the presence of cellulose nanofibers on the thermal conductivity of epoxy composites</a>,
+                                    <a style="color:black; text-decoration: none; font-size: 16px"> <i><b>Polym. Adv. Tech.</b></i></a>,
+                                    <a style="color:black; text-decoration: none; font-size: 16px"> xx</a>,
+                                    <a style="color:black; text-decoration: none; font-size: 16px"> 2020.</a>
+                                </h6>
+                            </li>
+                        </ul>
+                    </p>
+			<p>
+                        <h6>18.<a style="color:black; text-align: justify; font-size: 16px"> <b>M.C. Vu</b></a>, N.A.T. Thieu, W.K. Choi, M.A. Islam, S.R. Kim,</h6>
+                        <ul style="list-style: none; margin:0;">
+                            <li>
+                                <h6>
+                                    <a href="https://www.sciencedirect.com/science/article/pii/S1359835X20302670" style="color:blue; text-decoration: none; font-size: 16px"> Ultralight Covalently Interconnected Silicon Carbide Aerofoam for High Performance Thermally Conductive Epoxy Composites</a>,
+                                    <a style="color:black; text-align: justify; text-decoration: none; font-size: 16px"> <i><b>Composites Part A</b></i></a>,
+                                    <a style="color:black; text-align: justify; text-decoration: none; font-size: 16px"> 138</a>,
+                                    <a style="color:black; text-align: justify; text-decoration: none; font-size: 16px"> 2020.</a>
+                                </h6>
+                            </li>
+                        </ul>
+                    </p>
+	           <p>
+                        <h6>17.<a style="color:black; text-align: justify; font-size: 16px"> <b>M.C. Vu</b></a>, I.H. Kim, W.K. Choi, C.S. Lim, M.A. Islam, S.R. Kim,</h6>
+                        <ul style="list-style: none; margin:0;">
+                            <li>
+                                <h6>
+                                    <a href="https://pubs.acs.org/doi/abs/10.1021/acsami.0c02427" style="color:blue; text-decoration: none; font-size: 16px"> Highly Flexible Graphene Derivative Hybrid Film: An Outstanding Nonflammable Thermally Conductive yet Electrically Insulating Material for Efficient Thermal Management</a>,
+                                    <a style="color:black; text-align: justify; text-decoration: none; font-size: 16px"> <i><b>ACS Appl. Mater. Interfaces</b></i></a>,
+                                    <a style="color:black; text-align: justify; text-decoration: none; font-size: 16px"> 12</a>,
+                                    <a style="color:black; text-align: justify; text-decoration: none; font-size: 16px"> 2020.</a>
+                                </h6>
+                            </li>
+                        </ul>
+                    </p>
                     <p>
                         <h6>16.<a style="color:black; text-align: justify; font-size: 16px"> <b>M.C. Vu</b></a>, W.K. Choi, S.G. Lee, P.J. Park, D.H. Kim, M.A. Islam, S.R. Kim,</h6>
                         <ul style="list-style: none; margin:0;">
                             <li>
                                 <h6>
-                                    <a href="https://pubs.acs.org/doi/10.1021/acsami.0c02421" style="color:blue; text-decoration: none; font-size: 16px"> High Thermal Conductivity Enhancement of Polymer Composites with Vertically Aligned Silicon Carbide Sheet Ccaffold</a>,
+                                    <a href="https://pubs.acs.org/doi/10.1021/acsami.0c02421" style="color:blue; text-decoration: none; font-size: 16px"> High Thermal Conductivity Enhancement of Polymer Composites with Vertically Aligned Silicon Carbide Sheet Scaffold</a>,
                                     <a style="color:black; text-align: justify; text-decoration: none; font-size: 16px"> <i><b>ACS Appl. Mater. Interfaces</b></i></a>,
-                                    <a style="color:black; text-align: justify; text-decoration: none; font-size: 16px"> xxx</a>,
+                                    <a style="color:black; text-align: justify; text-decoration: none; font-size: 16px"> 12</a>,
                                     <a style="color:black; text-align: justify; text-decoration: none; font-size: 16px"> 2020.</a>
                                 </h6>
                             </li>
@@ -355,9 +411,7 @@ $(document).ready(function(){
                         <a style="color:blue"<b>Patents</b></a>
                     </h5>
 
-                    <h6>2. Efficient Private Matching for Private Databases  (<a href="https://ir.library.oregonstate.edu/concern/graduate_thesis_or_dissertations/st74cx64r" target="_blank">pdf</a>) </h6>
-                    <h6>1. Epione: Lightweight Contact Tracing with Strong Privacy  (<a href="https://sunblaze-ucb.github.io/privacy/projects/epione.html" target="_blank">pdf</a>) </h6>
-                    <br>
+                               <br>
                     <h5>
                         <a style="color:blue"<b>Books</b></a>
                     </h5>
@@ -385,12 +439,12 @@ $(document).ready(function(){
                         <li><a style="color:black; text-decoration: none; font-size: 16px; line-height: 1.5">Fabrication of <b>multilayered boron nitride</b> coated Fe foil.</a></li>
                         <li><a style="color:black; text-decoration: none; font-size: 16px; line-height: 1.5">Fabrication and characterization of 3D structure of <b>boron nitride sheets scaffold</b>, <b>boron nitride nanotubes sponges</b>.</a></li>
                         <li><a style="color:black; text-decoration: none; font-size: 16px; line-height: 1.5">Synthesis and characterization of 3D structure of covalently bonded <b>Silicon Carbide scaffold</b> for highly thermoconductive epoxy composites as <b>thermal interfacial materials</b> (2 published papers).</a></li>
-                        <li><a style="color:black; text-decoration: none; font-size: 16px; line-height: 1.5">Fabrication and characterization of <b>Graphene Fluoride</b> sheets for highly thermoconductive yet electroinsulative hybrid films as <b>heat spreader</b> in wearable electronic devices (2 published papers).</a></li>
+                        <li><a style="color:black; text-decoration: none; font-size: 16px; line-height: 1.5">Fabrication and characterization of <b>Graphene Fluoride</b> sheets for highly thermoconductive yet electro-insulating hybrid films as <b>heat spreader</b> in wearable electronic devices (2 published papers).</a></li>
                         <li><a style="color:black; text-decoration: none; font-size: 16px; line-height: 1.5">Development of dry adhesives based on structural surface of PDMS for <b>medical application</b> (1 published paper).</a></li>
                         <li><a style="color:black; text-decoration: none; font-size: 16px; line-height: 1.5">Apply <b>3D printing technology</b> (directed inkjet, FDM) for preparation of thermoconductive polymer composites.</a></li>
                         <li><a style="color:black; text-decoration: none; font-size: 16px; line-height: 1.5">Assisted supervisor in preparation of 3 novel research <b>proposals</b> on 3 different topics:</a></li>
                         <a style="color:black; text-decoration: none; font-size: 16px; line-height: 1.5">    - Development of highly thermal conductive <b>pressure-sensitive adhesive</b> composites.</a>
-                        <a style="color:black; text-decoration: none; font-size: 16px; line-height: 1.5">    - Development of <b>3D structure of fillers</b> for highly <b>thermoconductive and electroinsulative </b>polymeric composites materials.</a>
+                        <a style="color:black; text-decoration: none; font-size: 16px; line-height: 1.5">    - Development of <b>3D structure of fillers</b> for highly <b>thermoconductive and electro-insulating </b>polymeric composites materials.</a>
                         <a style="color:black; text-decoration: none; font-size: 16px; line-height: 1.5">    - Development of <b>dry adhesives</b> for medical application.</a>
 
                     </ul>
@@ -423,7 +477,7 @@ $(document).ready(function(){
                         <li><a style="color:black; text-decoration: none; font-size: 16px; line-height: 1.5">Profound knowledge and experiment research on <b>synthesis of nanomaterials</b> such as Graphene derivatives, Carbon Nanotubes, Boron Nitride, and Silicon Carbide.</a></li>
                         <li><a style="color:black; text-decoration: none; font-size: 16px; line-height: 1.5">Strong background in synthesis of the <b>UV-crosslinked pressure-sensitive adhesive</b>, and the <b>stretchable, self-healable polyurethane</b>.</a></li>
                         <li><a style="color:black; text-decoration: none; font-size: 16px; line-height: 1.5">Experience in: Chemical Vapor Deposition (CVD), Physical Evaporation, and Polymerization.</a></li>
-                        <li><a style="color:black; text-decoration: none; font-size: 16px; line-height: 1.5">Expertise in: <b>FT-IR, XRD, XPS, Raman, SEM, EDX, TEM, AFM</b>, <b>Tension </b>, <b>Dynamic Mechanical Analysis</b>, <b>Thermal Gravity Analysis</b>, <b>Thermal Diffusivity</b>, <b>Electrical Conductivity</b>, <b>Electromagnetic Shielding Interference</b>, <b>Electrochemical Impedance Spectroscopic (EIS)</b>.</a></li>
+                        <li><a style="color:black; text-decoration: none; font-size: 16px; line-height: 1.5">Expertise in: <b>FT-IR, NMR, UV-Vis, XRD, XPS, Raman, SEM, EDX, TEM, AFM</b>, <b>Tension</b>, <b>Dynamic Mechanical Analysis</b>, <b>Thermal Gravimetric Analysis</b>, <b>Thermal Diffusivity</b>, <b>Electrical Conductivity</b>, <b>Electromagnetic Interference Shielding </b>, <b>Electrochemical Impedance Spectroscopic (EIS)</b>.</a></li>
                     </ul>
                 </div>
 
@@ -448,7 +502,7 @@ $(document).ready(function(){
                     <ul style="margin:0;">
 
                         <li><a style="color:black; text-decoration: none; font-size: 16px; line-height: 1.5">Mar 2015: Full scholarship for Master program from Korea National University of Transportation ($18.000/year).</a></li>
-                        <li><a style="color:black; text-decoration: none; font-size: 16px; line-height: 1.5">Aug 2015: Full scholarship for Doctoral program from Korea National University of Transportation ($24.000/year).</a></li>
+                        <li><a style="color:black; text-decoration: none; font-size: 16px; line-height: 1.5">Aug 2017: Full scholarship for Doctoral program from Korea National University of Transportation ($24.000/year).</a></li>
 
                     </ul>
                 </div>
@@ -463,7 +517,7 @@ $(document).ready(function(){
                     <h5><a style="color:blue"><b>Languages</b></a></h5>
                     <ul style="list-style: none; margin:0;">
                         <li>
-                            <a style="color:black; text-decoration: none; font-size: 16px; line-height: 1.5">Vietnamese, English, Korea</a>
+                            <a style="color:black; text-decoration: none; font-size: 16px; line-height: 1.5">Vietnamese, English, Korean</a>
                         </li>
 
                     </ul>
