--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ $(document).ready(function(){
  	<h5><a style="color:blue"><b>Peer-Reviewed Journal Articles</b></a></h5>
 	   <p>
 
-                <h6>25.<a style="color:black; text-align: justify; font-size: 16px"> <b>M.C. Vu</b></a>, T.H. Jang, C.B. Kim, D.H. Kim, W.K. Choi, M.A. Islam, S.R. Kim,</h6>
+                <h6>25.<a style="color:black; text-align: justify; font-size: 16px"> <b>M.C. Vu</b></a>, T.H. Jeong, J.B. Kim, D.H. Kim, W.K. Choi, M.A. Islam, S.R. Kim,</h6>
                         <ul style="list-style: none; margin:0;">
                             <li>
                                 <h6>
@@ -159,7 +159,7 @@ $(document).ready(function(){
                             </li>
                         </ul>
                     </p>         
-		 <h6>24.<a style="color:black; text-align: justify; font-size: 16px"> D. Mani, <b>M.C. Vu</b></a>, T.H. Jang, C.B. Kim, C.S. Lim, J.H. Lim, K.M. Kim, S.R. Kim,</h6>
+		 <h6>24.<a style="color:black; text-align: justify; font-size: 16px"> D. Mani, <b>M.C. Vu</b></a>, T.H. Jeong, C.B. Kim, C.S. Lim, J.H. Lim, K.M. Kim, S.R. Kim,</h6>
                         <ul style="list-style: none; margin:0;">
                             <li>
                                 <h6>
@@ -171,7 +171,7 @@ $(document).ready(function(){
                             </li>
                         </ul>
                     </p>  
-		 <h6>23.<a style="color:black; text-align: justify; font-size: 16px"> <b>M.C. Vu</b></a>, D. Mani, J.B. Kim, T.H. Jang, ... , D. Losic, C.S. Lim, S.R. Kim,</h6>
+		 <h6>23.<a style="color:black; text-align: justify; font-size: 16px"> <b>M.C. Vu</b></a>, D. Mani, J.B. Kim, T.H. Jeong, ... , D. Losic, C.S. Lim, S.R. Kim,</h6>
                         <ul style="list-style: none; margin:0;">
                             <li>
                                 <h6>
@@ -224,7 +224,7 @@ $(document).ready(function(){
                     </p>
 
 		<p>
-                        <h6>19.<a style="color:black; text-align: justify; font-size: 16px"> <b>M.C. Vu</b></a>, T.H. Jang, C.B. Kim, D.H. Kim, W.K. Choi, M.A. Islam, S.R. Kim,</h6>
+                        <h6>19.<a style="color:black; text-align: justify; font-size: 16px"> <b>M.C. Vu</b></a>, T.H. Jeong, C.B. Kim, D.H. Kim, W.K. Choi, M.A. Islam, S.R. Kim,</h6>
                         <ul style="list-style: none; margin:0;">
                             <li>
                                 <h6>
@@ -518,7 +518,7 @@ method of fabrication for the same</a>,
                         </ul>
 </p>
 <p>
-                <h6>4.<a style="color:black; text-align: justify; font-size: 16px"> <b>M.C. Vu</b></a>, T.H. Jang, C.B. Kim, D.H. Kim, W.K. Choi, M.A. Islam, S.R. Kim,</h6>
+                <h6>4.<a style="color:black; text-align: justify; font-size: 16px"> <b>M.C. Vu</b></a>, T.H. Jeong, J.B. Kim, D.H. Kim, W.K. Choi, M.A. Islam, S.R. Kim,</h6>
                         <ul style="list-style: none; margin:0;">
                             <li>
                                 <h6>
