--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ $(document).ready(function(){
                             </li>
                         </ul>
                     </p>         
-		 <h6>24.<a style="color:black; text-align: justify; font-size: 16px"> D. Mani, <b>M.C. Vu</b></a>, T.H. Jeong, C.B. Kim, C.S. Lim, J.H. Lim, K.M. Kim, S.R. Kim,</h6>
+		 <h6>24.<a style="color:black; text-align: justify; font-size: 16px"> D. Mani, <b>M.C. Vu</b></a>, T.H. Jeong, J.B. Kim, C.S. Lim, J.H. Lim, K.M. Kim, S.R. Kim,</h6>
                         <ul style="list-style: none; margin:0;">
                             <li>
                                 <h6>
