--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ $(document).ready(function(){
                     </p>
 
 		<p>
-                        <h6>19.<a style="color:black; text-align: justify; font-size: 16px"> <b>M.C. Vu</b></a>, T.H. Jeong, C.B. Kim, D.H. Kim, W.K. Choi, M.A. Islam, S.R. Kim,</h6>
+                        <h6>19.<a style="color:black; text-align: justify; font-size: 16px"> <b>M.C. Vu</b></a>, T.H. Jeong, J.B. Kim, D.H. Kim, W.K. Choi, M.A. Islam, S.R. Kim,</h6>
                         <ul style="list-style: none; margin:0;">
                             <li>
                                 <h6>
